--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="social__header">
             <img class="social__picture" src="img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
             <p class="social__caption"></p>
-            <p class="social__likes">Нравится <span class="likes-count">356</span></p>
+            <p class="social__likes">Нравится <span class="likes-count"></span></p>
           </div>
           <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
@@ -200,7 +200,7 @@
   </template>
 
   <script type="module" src="js/pictures.js"></script>
-  <script type="module" src="js/package.js"></script>
+  <script src="js/upload-image.js"></script>
 
 </body>
 </html>
