add slider.js and image-editor.js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                   <fieldset class="img-upload__resize resize">
                     <button type="button" class="resize__control resize__control--minus">Уменьшить</button>
-                    <input type="text" class="resize__control resize__control--value" value="55%" title="Image Scale" name="scale" readonly>
+                    <input type="text" class="resize__control resize__control--value" value="50%" title="Image Scale" name="scale" readonly>
                     <button type="button" class="resize__control resize__control--plus">Увеличить</button>
                   </fieldset>
 
@@ -201,6 +201,7 @@
 
   <script type="module" src="js/pictures.js"></script>
   <script src="js/upload-image.js"></script>
-
+  <script src="js/image-editor.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
