add validation form

--- a/index.html
+++ b/index.html
@@ -204,6 +204,6 @@
   <script src="js/upload-image.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/image-settings.js"></script>
-
+  <script src="js/form-validation.js"></script>
 </body>
 </html>
