upgrade big-picture.js

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <p class="social__caption"></p>
             <p class="social__likes">Нравится <span class="likes-count"></span></p>
           </div>
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count"><span class="current-comment-count">5</span> из <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
           </ul>
           <button class="social__loadmore" type="button">Загрузить еще</button>
@@ -200,7 +200,8 @@
   </template>
 
   <script src="js/utils.js"></script>
-  <script type="module" src="js/pictures.js"></script>
+  <script type="module" src="js/small-pictures.js"></script>
+  <script type="module" src="js/big-picture.js"></script>
   <script src="js/upload-image.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/image-settings.js"></script>
