--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
     </div>
   </footer>
 
-  <script type="module" src="bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
