--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 
 <body>
 
-  <main>
-  </main>
+  <main id="root"></main>
 
   <footer class="page-footer container">
     <div class="page-footer__wrapper">
